--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				
 
         //event
-				document.addEventListener( 'touchmove', onDocumentMouseMove, false );
+				document.addEventListener( 'touchcancel', onDocumentMouseMove, false );
 				document.addEventListener( 'touchend', onDocumentMouseDown, false );
 				document.addEventListener( 'keydown', onDocumentKeyDown, false );
 				window.addEventListener( 'resize', onWindowResize, false );
