--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
         //event
 				document.addEventListener( 'touchmove', onDocumentMouseMove, false );
-				document.addEventListener( 'touchend', onDocumentMouseDown, false );
+				document.addEventListener( 'touchstart', onDocumentMouseDown, false );
 				document.addEventListener( 'keydown', onDocumentKeyDown, false );
 				window.addEventListener( 'resize', onWindowResize, false );
 
@@ -160,8 +160,8 @@
 
 
 			function onDocumentMouseMove( event ) {
-				event.preventDefault();
-				mouse.set( ( event.touches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.touches[0].clientY / window.innerHeight ) * 2 + 1 );
+				//event.preventDefault();
+				mouse.set( ( event.changeTouches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.changeTouches[0].clientY / window.innerHeight ) * 2 + 1 );
 				raycaster.setFromCamera( mouse, camera );
 				var intersects = raycaster.intersectObjects( objects );
         if ( intersects.length > 0 ) {
@@ -182,8 +182,8 @@
 			}
 
 			function onDocumentMouseDown( event ) {
-				event.preventDefault();
-				mouse.set( ( event.changeTouches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.changeTouches[0].clientY / window.innerHeight ) * 2 + 1 );
+				//event.preventDefault();
+				mouse.set( ( event.touches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.touches[0].clientY / window.innerHeight ) * 2 + 1 );
 				raycaster.setFromCamera( mouse, camera );
 				var intersects = raycaster.intersectObjects( objects );
 				var intersect = intersects[0];
