--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				mouse = new THREE.Vector2();
 
         //orbitControls
-        orbitControls = new THREE.OrbitControls(camera, renderer.domElement);
+       // orbitControls = new THREE.OrbitControls(camera, renderer.domElement);
 
         //event
 				if (isTouchDevice()) {
