--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				mouse = new THREE.Vector2();
 
         //orbitControls
-       // orbitControls = new THREE.OrbitControls(camera, renderer.domElement);
+        orbitControls = new THREE.OrbitControls(camera, renderer.domElement);
 
         //event
 				if (isTouchDevice()) {
@@ -167,7 +167,12 @@
 
 			function onDocumentMouseMove( event ) {
 				event.preventDefault();
-				mouse.set( ( event.clientX / window.innerWidth ) * 2 - 1, - ( event.clientY / window.innerHeight ) * 2 + 1 );
+				if (isTouchDevice()) {
+					mouse.set( ( event.touches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.touches[0].clientY / window.innerHeight ) * 2 + 1 );
+				}
+				else {
+					mouse.set( ( event.clientX / window.innerWidth ) * 2 - 1, - ( event.clientY / window.innerHeight ) * 2 + 1 );
+				}
 				raycaster.setFromCamera( mouse, camera );
 				var intersects = raycaster.intersectObjects( objects );
         if ( intersects.length > 0 ) {
