--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         //event
 				if (isTouchDevice()) {
 					document.addEventListener( 'touchmove', onDocumentMouseMove, false );
-					document.addEventListener( 'touchend', onDocumentMouseDown, false );
+					document.addEventListener( 'touchend', onDocumentMouseDown, false );alert('ok');
 				}
 				else {
 					document.addEventListener( 'mousemove', onDocumentMouseMove, false );
