--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         //event
 				if (isTouchDevice()) {
 					document.addEventListener( 'touchmove', onDocumentMouseMove, false );
-					document.addEventListener( 'touchend', onDocumentMouseDown, false );alert('ok2');
+					document.addEventListener( 'touchend', onDocumentMouseDown, false );alert(isTouchDevice());
 				}
 				else {
 					document.addEventListener( 'mousemove', onDocumentMouseMove, false );
@@ -167,7 +167,7 @@
 
 
 			function onDocumentMouseMove( event ) {
-				event.preventDefault();
+				//event.preventDefault();
 				if (isTouchDevice()) {
 					mouse.set( ( event.changeTouches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.changeTouches[0].clientY / window.innerHeight ) * 2 + 1 );
 				}
@@ -185,7 +185,7 @@
 			}
 
 			function onDocumentMouseDown( event ) {
-				event.preventDefault();
+				//event.preventDefault();
 				if (isTouchDevice()) {
 					mouse.set( ( event.touches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.touches[0].clientY / window.innerHeight ) * 2 + 1 );
 				}
