--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 			function onDocumentMouseMove( event ) {
 				//event.preventDefault();
 				if (isTouchDevice()) {
-					mouse.set( ( event.touches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.touches[0].clientY / window.innerHeight ) * 2 + 1 );alert('op');
+					mouse.set( ( event.changeTouches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.changeTouches[0].clientY / window.innerHeight ) * 2 + 1 );
 				}
 				else {
 					mouse.set( ( event.clientX / window.innerWidth ) * 2 - 1, - ( event.clientY / window.innerHeight ) * 2 + 1 );
