--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         //event
 				if (isTouchDevice()) {
 					document.addEventListener( 'touchmove', onDocumentMouseMove, false );
-					document.addEventListener( 'touchstart', onDocumentMouseDown, false );alert(isTouchDevice());
+					document.addEventListener( 'touchstart', onDocumentMouseDown, false );
 				}
 				else {
 					document.addEventListener( 'mousemove', onDocumentMouseMove, false );
@@ -170,6 +170,7 @@
 				//event.preventDefault();
 				if (isTouchDevice()) {
 					mouse.set( ( event.changeTouches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.changeTouches[0].clientY / window.innerHeight ) * 2 + 1 );
+					alert(event.changeTouches[0].clientX);alert(event.touches[0].clientX);
 				}
 				else {
 					mouse.set( ( event.clientX / window.innerWidth ) * 2 - 1, - ( event.clientY / window.innerHeight ) * 2 + 1 );
