--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 			function onDocumentMouseMove( event ) {
 				//event.preventDefault();
-				alert(isTouchDevice());alert(event.touches[0].clientX);alert(event.changeTouches[0].clientX);
+				alert(event.changeTouches[0].clientX);
 				if (isTouchDevice()) {
 					mouse.set( ( event.changeTouches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.changeTouches[0].clientY / window.innerHeight ) * 2 + 1 );
 					alert(event.changeTouches[0].clientX);alert(event.touches[0].clientX);
