--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 
 			function onDocumentMouseMove( event ) {
-				//event.preventDefault();
+				event.preventDefault();
 				
 				if (isTouchDevice()) {
 					mouse.set( ( event.touches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.touches[0].clientY / window.innerHeight ) * 2 + 1 );
@@ -187,7 +187,7 @@
 			}
 
 			function onDocumentMouseDown( event ) {
-				//event.preventDefault();
+				event.preventDefault();
 				//alert(event.touches[0].clientX);
 				if (isTouchDevice()) {
 					mouse.set( ( event.changeTouches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.changeTouches[0].clientY / window.innerHeight ) * 2 + 1 );
