--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
 					mouse.set( ( event.touches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.touches[0].clientY / window.innerHeight ) * 2 + 1 );
 					//alert(event.touches[0].clientX);alert(event.touches[0].clientX);
 				}
-				else {
-					mouse.set( ( event.clientX / window.innerWidth ) * 2 - 1, - ( event.clientY / window.innerHeight ) * 2 + 1 );
-				}
+				//else {
+				//	mouse.set( ( event.clientX / window.innerWidth ) * 2 - 1, - ( event.clientY / window.innerHeight ) * 2 + 1 );
+				//}
 				raycaster.setFromCamera( mouse, camera );
 				var intersects = raycaster.intersectObjects( objects );
         			if ( intersects.length > 0 ) {
