--- a/index.html
+++ b/index.html
@@ -188,14 +188,14 @@
 
 			function onDocumentMouseDown( event ) {
 				event.preventDefault();
-				
+				alert(event.changeTouches[0].clientX);
 				if (isTouchDevice()) {
 					mouse.set( ( event.changeTouches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.changeTouches[0].clientY / window.innerHeight ) * 2 + 1 );
 				}
 				//else {
 				//	mouse.set( ( event.clientX / window.innerWidth ) * 2 - 1, - ( event.clientY / window.innerHeight ) * 2 + 1 );
 				//}
-				raycaster.setFromCamera( mouse, camera );alert(mouse);
+				raycaster.setFromCamera( mouse, camera );
 				var intersects = raycaster.intersectObjects( objects );
 				var intersect = intersects[0];
 				var isLast=true;
