--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
 
 			function onDocumentMouseDown( event ) {
 				event.preventDefault();
-				alert(event.changeTouches[0].clientX);
+				alert(event.touches[0].clientX);
 				if (isTouchDevice()) {
-					mouse.set( ( event.changeTouches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.changeTouches[0].clientY / window.innerHeight ) * 2 + 1 );
+					mouse.set( ( event.touches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.touches[0].clientY / window.innerHeight ) * 2 + 1 );
 				}
 				//else {
 				//	mouse.set( ( event.clientX / window.innerWidth ) * 2 - 1, - ( event.clientY / window.innerHeight ) * 2 + 1 );
