--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
 
 			function onDocumentMouseDown( event ) {
 				event.preventDefault();
-				alert(event.touches[0].clientX);
+				
 				if (isTouchDevice()) {
 					mouse.set( ( event.touches[0].clientX / window.innerWidth ) * 2 - 1, - ( event.touches[0].clientY / window.innerHeight ) * 2 + 1 );
 				}
-				//else {
-				//	mouse.set( ( event.clientX / window.innerWidth ) * 2 - 1, - ( event.clientY / window.innerHeight ) * 2 + 1 );
-				//}
+				else {
+					mouse.set( ( event.clientX / window.innerWidth ) * 2 - 1, - ( event.clientY / window.innerHeight ) * 2 + 1 );
+				}
 				raycaster.setFromCamera( mouse, camera );
 				var intersects = raycaster.intersectObjects( objects );
 				var intersect = intersects[0];
